# ChangeLog for sci-mathematics/netgen
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Mar 2011; Justin Lecher <jlec@gentoo.org> netgen-4.9.13.ebuild:
  Moved media-libs/jpeg -> virtual/jpeg

  19 Oct 2010; Oliver Borm (boroli) <oli.borm@web.de>
  -netgen-4.9.11-r1.ebuild:
  sci-mathematics/netgen: Removed old version

*netgen-4.9.13 (19 Oct 2010)

  19 Oct 2010; Oliver Borm (boroli) <oli.borm@web.de> +netgen-4.9.13.ebuild:
  sci-mathematics/netgen: Version bump

  01 Oct 2009; Oliver Borm (boroli) <oli.borm@web.de> ChangeLog:
  new release, as the libTogl location has changed

  01 Oct 2009; Oliver Borm (boroli) <oli.borm@web.de> ChangeLog:
  Changed opencascade path to $CASROOT; removed old 4.4er versions

  18 Sep 2009; Oliver Borm (boroli) <oli.borm@web.de> ChangeLog:
  Version bump

  04 Sep 2009; Oliver Borm (boroli) <oli.borm@web.de> ChangeLog:
  Changed to slotted togl-1.7, minor changes for opencascade

  03 Sep 2009; Oliver Borm (boroli) <oli.borm@web.de> ChangeLog:
  fixed netgen.desktop

  03 Sep 2009; Oliver Borm (boroli) <oli.borm@web.de> ChangeLog:
  Version bump

  26 Aug 2008; Oliver Borm (boroli) <oli.borm@web.de> netgen-4.4.ebuild,
  netgen-4.4-r1.ebuild:
  Fixed dependency for opencascade

  20 May 2008; Daniel Tourde <daniel.tourde@caelae.se>
  -files/debian-inspired-netgen_4.4-9.patch, -files/debian-inspired-netgen_4.4-9.2.patch, -files/icon/netgen.desktop, -files/icon/netgen-icon.png, +netgen-4.4-makefiles.patch, +netgen.png, +netgen-4.4-order.patch, +netgen-4.4-datadir.patch, +netgen-4.4-stdlib.patch, +netgen-4.4-declarations.patch, +netgen-4.4-tkversion.patch
  Extensive rework of the ebuild and the epatches by SÃÂ©bastien Fabbro <bicatali@gentoo.org>. At the moment, the OpenCascade support is broken.

  12 May 2008; Daniel Tourde <daniel.tourde@caelae.se>